k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weather-app-ingress
spec:
  rules:
  - host: "weather.charitooconstructions.com.ng"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: weather-app-svc
            port:
              number: 80
